feat: add page content

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -19,7 +19,58 @@
       <h1>skilled</h1>
       <button class="button primary">Get Started</button>
     </nav>
-    <div>Body</div>
-    <footer>Footer</footer>
+    <div class="body-container">
+      <div class="hero-Container">
+        <h1 class="body-header">Maximize skill, minimize budget</h1>
+        <p class="body-text">
+          Our modern courses across a range of in-demand skills will give you
+          the knowledge you need to live the life you want.
+        </p>
+         <button class="button secondary">Get Started</button>
+      </div>
+      <div class="img-container">
+        <img class="body-img" src="./assets/image-hero-desktop.png" alt="" />
+      </div>
+    </div>
+    <div class='grid-container'>
+      <div class="minicard grand">
+        <span class="minicardgrand-span">Check out our most popular courses!</span> 
+      </div>
+      <div class="minicard feat">
+        <img src="./assets/icon-animation.svg" alt="animation" class="minicard-img">
+        <span class="minicard-span">Animation</span> 
+        <span class="minicard-span-subtitle">Learn the latest animation techniques to create stunning motion design and captivate your audience.</span> 
+        <span class="minicard-span-subtitle-action">Get Started </span>
+      </div>
+      <div class="minicard feat">
+        <img src="./assets/icon-design.svg" alt="animation" class="minicard-img">
+        <span class="minicard-span">Design</span> 
+        <span class="minicard-span-subtitle">Create beautiful, usable interfaces to help shape the future of how the web looks.</span> 
+        <span class="minicard-span-subtitle-action">Get Started </span>
+      </div>
+      <div class="minicard feat">
+        <img src="./assets/icon-photography.svg" alt="animation" class="minicard-img">
+        <span class="minicard-span">Animation</span> 
+        <span class="minicard-span-subtitle">Learn the latest animation techniques to create stunning motion design and captivate your audience.</span> 
+        <span class="minicard-span-subtitle-action">Get Started </span>
+      </div>
+      <div class="minicard feat">
+        <img src="./assets/icon-crypto.svg"alt="animation" class="minicard-img">
+        <span class="minicard-span">Animation</span> 
+        <span class="minicard-span-subtitle">Learn the latest animation techniques to create stunning motion design and captivate your audience.</span> 
+        <span class="minicard-span-subtitle-action">Get Started </span>
+      </div>
+      <div class="minicard feat">
+        <img src="./assets/icon-business.svg" alt="animation" class="minicard-img">
+        <span class="minicard-span">Animation</span> 
+        <span class="minicard-span-subtitle">Learn the latest animation techniques to create stunning motion design and captivate your audience.</span> 
+        <span class="minicard-span-subtitle-action">Get Started </span>
+      </div>
+   
+    </div>
+    <footer>
+      <span class="footer-span">skilled</span>
+      <button class="button third">Get Started</button>
+    </footer>
   </body>
 </html>
