--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -29,7 +29,9 @@
          <button class="button secondary">Get Started</button>
       </div>
       <div class="img-container">
-        <img class="body-img" src="./assets/image-hero-desktop.png" alt="" />
+      <img   class="body-img desktop" src="./assets/image-hero-desktop.webp" alt="IfItDoesntMatchAnyMedia">
+      <img   class="body-img tablet" src="./assets/image-hero-tablet.png" alt="IfItDoesntMatchAnyMedia">
+      <img   class="body-img mobile" src="./assets/image-hero-mobile.png" alt="IfItDoesntMatchAnyMedia">
       </div>
     </div>
     <div class='grid-container'>
@@ -50,20 +52,20 @@
       </div>
       <div class="minicard feat">
         <img src="./assets/icon-photography.svg" alt="animation" class="minicard-img">
-        <span class="minicard-span">Animation</span> 
-        <span class="minicard-span-subtitle">Learn the latest animation techniques to create stunning motion design and captivate your audience.</span> 
+        <span class="minicard-span">Photography</span> 
+        <span class="minicard-span-subtitle">Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</span> 
         <span class="minicard-span-subtitle-action">Get Started </span>
       </div>
       <div class="minicard feat">
         <img src="./assets/icon-crypto.svg"alt="animation" class="minicard-img">
-        <span class="minicard-span">Animation</span> 
-        <span class="minicard-span-subtitle">Learn the latest animation techniques to create stunning motion design and captivate your audience.</span> 
+        <span class="minicard-span">Crypto</span> 
+        <span class="minicard-span-subtitle">All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</span> 
         <span class="minicard-span-subtitle-action">Get Started </span>
       </div>
       <div class="minicard feat">
         <img src="./assets/icon-business.svg" alt="animation" class="minicard-img">
-        <span class="minicard-span">Animation</span> 
-        <span class="minicard-span-subtitle">Learn the latest animation techniques to create stunning motion design and captivate your audience.</span> 
+        <span class="minicard-span">Business</span> 
+        <span class="minicard-span-subtitle">A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</span> 
         <span class="minicard-span-subtitle-action">Get Started </span>
       </div>
    
