--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="../styles//index.css" />
+    <link rel="stylesheet" href="./index.css" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/favicon-32x32.png"
+      href="./index/assets/favicon-32x32.png"
     />
 
     <title>Frontend Mentor | Skilled e-learning landing page</title>
@@ -29,9 +29,9 @@
          <button class="button secondary">Get Started</button>
       </div>
       <div class="img-container">
-      <img   class="body-img desktop" src="./assets/image-hero-desktop.webp" alt="IfItDoesntMatchAnyMedia">
-      <img   class="body-img tablet" src="./assets/image-hero-tablet.png" alt="IfItDoesntMatchAnyMedia">
-      <img   class="body-img mobile" src="./assets/image-hero-mobile.png" alt="IfItDoesntMatchAnyMedia">
+      <img   class="body-img desktop" src="./index/assets/image-hero-desktop.webp" alt="IfItDoesntMatchAnyMedia">
+      <img   class="body-img tablet" src="./index/assets/image-hero-tablet.png" alt="IfItDoesntMatchAnyMedia">
+      <img   class="body-img mobile" src="./index/assets/image-hero-mobile.png" alt="IfItDoesntMatchAnyMedia">
       </div>
     </div>
     <div class='grid-container'>
@@ -39,31 +39,31 @@
         <span class="minicardgrand-span">Check out our most popular courses!</span> 
       </div>
       <div class="minicard feat">
-        <img src="./assets/icon-animation.svg" alt="animation" class="minicard-img">
+        <img src="./index/assets/icon-animation.svg" alt="animation" class="minicard-img">
         <span class="minicard-span">Animation</span> 
         <span class="minicard-span-subtitle">Learn the latest animation techniques to create stunning motion design and captivate your audience.</span> 
         <span class="minicard-span-subtitle-action">Get Started </span>
       </div>
       <div class="minicard feat">
-        <img src="./assets/icon-design.svg" alt="animation" class="minicard-img">
+        <img src="./index/assets/icon-design.svg" alt="animation" class="minicard-img">
         <span class="minicard-span">Design</span> 
         <span class="minicard-span-subtitle">Create beautiful, usable interfaces to help shape the future of how the web looks.</span> 
         <span class="minicard-span-subtitle-action">Get Started </span>
       </div>
       <div class="minicard feat">
-        <img src="./assets/icon-photography.svg" alt="animation" class="minicard-img">
+        <img src="./index/assets/icon-photography.svg" alt="animation" class="minicard-img">
         <span class="minicard-span">Photography</span> 
         <span class="minicard-span-subtitle">Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</span> 
         <span class="minicard-span-subtitle-action">Get Started </span>
       </div>
       <div class="minicard feat">
-        <img src="./assets/icon-crypto.svg"alt="animation" class="minicard-img">
+        <img src="./index/assets/icon-crypto.svg"alt="animation" class="minicard-img">
         <span class="minicard-span">Crypto</span> 
         <span class="minicard-span-subtitle">All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</span> 
         <span class="minicard-span-subtitle-action">Get Started </span>
       </div>
       <div class="minicard feat">
-        <img src="./assets/icon-business.svg" alt="animation" class="minicard-img">
+        <img src="./index/assets/icon-business.svg" alt="animation" class="minicard-img">
         <span class="minicard-span">Business</span> 
         <span class="minicard-span-subtitle">A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</span> 
         <span class="minicard-span-subtitle-action">Get Started </span>
